# araxis_syntax_tool

./: .gitignore  README.md  REGISTRY-SUPPORT.md  main.py  package-lock.json  package.json  pyproject.toml
new/: gradle_groovy.json  gradle_kts.json  kotlin.json
src/araxis_syntax_tool/: cli.py
testdata/: araxis_syntax_blob.headerjson  araxis_syntax_blob.json  demo_repacked.json  roundtrip_repacked.json
testdata/demo_out/: BrandNewLanguage (BNL).json  TwinCAT or IEC.json  VisualData_le_.json
testdata/roundtrip_out/: BrandNewLanguage (BNL).json  TwinCAT or IEC.json  VisualData_le_.json
